# libbh

./: .gitignore  CMakeLists.txt  README.md
include/bh/: common.h  eigen.h  eigen_options.h  eigen_serialization.h  eigen_utils.h  hdf5_utils.h  io_utils.h  random.h  string_utils.h  thread.h
include/bh/contrib/nanoflann/: nanoflann.hpp
include/bh/mLib/: mLib.h  mLibCoreMesh.h  mLibExtra.h  mLibUtils.h
include/bh/math/: continuous_grid3d.h  contrib_tribox3.h  geometry.h  utilities.h
include/bh/mesh/: point_cloud.h  point_cloud.hxx  point_cloud_algorithms.h  point_cloud_algorithms_voxel_grid.hxx  triangle_mesh.h  triangle_mesh.hxx
include/bh/nn/: approximate_nearest_neighbor.h  approximate_nearest_neighbor.hxx  nearest_neighbor.h  nearest_neighbor.hxx
include/bh/opengl/: offscreen_opengl.h  offscreen_opengl.hxx
include/bh/qt/: options.h
src/mLib/: mLib.cpp  mLibZlib.cpp
